[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game/GUIComponents/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Game/GlobalScripts/GameData.gd" type="Script" id=2]
[ext_resource path="res://Utils/Debug/DebugConfig.gd" type="Script" id=3]
[ext_resource path="res://Game/Assets/Images/UI/close-normal.png" type="Texture" id=4]
[ext_resource path="res://Game/Assets/Images/UI/close-hover.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00784314, 0, 0.180392, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.890196, 0.623529, 0, 0.654902 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00392157, 0, 0.0588235, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.329412, 0.231373, 0, 0.654902 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Game/Assets/Fonts/PressStart2P-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.00784314, 0.180392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0.447059, 0, 1 )
border_blend = true
shadow_color = Color( 1, 0.513726, 0, 0.6 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDebugDialog" type="Button" parent="Panel"]
anchor_left = 0.363
anchor_top = 0.636
anchor_right = 0.636
anchor_bottom = 0.636
margin_bottom = 25.6
rect_min_size = Vector2( 160, 32 )
rect_clip_content = true
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.239216, 0.152941, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 1, 0.737255, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.682353, 0.176471, 0, 1 )
shortcut_in_tooltip = false
text = "CONFIG DEBUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Panel"]
anchor_left = 0.376
anchor_top = 0.476
anchor_right = 0.625
anchor_bottom = 0.525
margin_right = -80.0
margin_bottom = -16.0
rect_min_size = Vector2( 160, 32 )
rect_clip_content = true
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.760784, 0.407843, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.737255, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.682353, 0.176471, 0, 1 )
shortcut_in_tooltip = false
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="Panel"]
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.7
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_icons/close_highlight = ExtResource( 5 )
custom_icons/close = ExtResource( 4 )
custom_styles/panel = SubResource( 7 )
custom_fonts/title_font = SubResource( 5 )
custom_colors/title_color = Color( 1, 0.537255, 0, 1 )
custom_constants/close_h_ofs = 17
custom_constants/close_v_ofs = 23
custom_constants/title_height = 32
popup_exclusive = true
window_title = "Debug configuration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Panel/WindowDialog"]
anchor_left = 0.086
anchor_right = 0.914
rect_min_size = Vector2( 0, 256 )
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugActivated" type="CheckButton" parent="Panel/WindowDialog/Control"]
anchor_right = 1.0
margin_right = -0.000244141
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.458824, 0.458824, 0.458824, 1 )
custom_colors/font_color_hover_pressed = Color( 0.65098, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.494118, 0.00392157, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.764706, 0.290196, 1 )
text = "DEBUG ACTIVATED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console messages" type="CheckButton" parent="Panel/WindowDialog/Control"]
anchor_right = 1.0
margin_top = 64.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.458824, 0.458824, 0.458824, 1 )
custom_colors/font_color_hover_pressed = Color( 0.65098, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.494118, 0.00392157, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.764706, 0.290196, 1 )
text = "CONSOLE MESSAGES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel messages" type="CheckButton" parent="Panel/WindowDialog/Control"]
anchor_right = 1.0
margin_top = 128.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.458824, 0.458824, 0.458824, 1 )
custom_colors/font_color_hover_pressed = Color( 0.65098, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.494118, 0.00392157, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.764706, 0.290196, 1 )
text = "PANEL MESSAGES"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Objects panels" type="CheckButton" parent="Panel/WindowDialog/Control"]
anchor_right = 1.0
margin_top = 192.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.458824, 0.458824, 0.458824, 1 )
custom_colors/font_color_hover_pressed = Color( 0.65098, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.494118, 0.00392157, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.764706, 0.290196, 1 )
text = "OBJECTS PANELS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameConfig" type="Node" parent="."]
script = ExtResource( 2 )
long_transition_delay = 1
short_transition_delay = 1

[node name="DebugConfig" type="Node" parent="."]
script = ExtResource( 3 )
active = true
console = true
[connection signal="pressed" from="Panel/OpenDebugDialog" to="." method="_on_OpenDebugDialog_pressed"]
[connection signal="pressed" from="Panel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="toggled" from="Panel/WindowDialog/Control/DebugActivated" to="." method="_on_DebugActivated_toggled"]
[connection signal="toggled" from="Panel/WindowDialog/Control/Console messages" to="." method="_on_Console_messages_toggled"]
[connection signal="toggled" from="Panel/WindowDialog/Control/Panel messages" to="." method="_on_Panel_messages_toggled"]
[connection signal="toggled" from="Panel/WindowDialog/Control/Objects panels" to="." method="_on_Objects_panels_toggled"]
